--- a/cap02/projeto/curiosidades.html
+++ b/cap02/projeto/curiosidades.html
@@ -36,11 +36,11 @@ Antes de mais nada é importante que você tenha em mente a resposta para alguma
 <li>É rígido com limpeza?</li>
 <li>Fica preocupado com bagunça?</li>
 </ol>
-
-
-
-
-
+<figure>
+<img src="Multimidia/bolinha.JPG" alt="brincando com a bolinha"> 
+<img src="Multimidia/esquentar-pes.JPG" alt="esquentando os pés">
+<figcaption>Para brincar ou esquentar os seus pés</figcaption>
+</figure>
 <h3> Veja algumas raças:</h3>
 
 
