--- a/cap02/projeto/quem-somos.html
+++ b/cap02/projeto/quem-somos.html
@@ -16,7 +16,7 @@
 
 
 
-<h1>Quem somos</h1>
+<h1><img src="Multimidia/meuamigocao.jpg" alt="meu amigo cão - pet shop">Quem somos</h1>
 
 <p>O que nós acreditamos <br>
 Na <strong>Meu amigo cão</strong>, o nosso sucesso como uma organização é conduzida pelo cuidado 
