--- a/cap02/projeto/index.html
+++ b/cap02/projeto/index.html
@@ -18,15 +18,15 @@
 
 <ul>
 
-<li>Home</li>
+<li><a href="index.html">Home</a></li>
 
-<li>Quem somos</li>
+<li><a href="quem-somos.html">Quem somos</a></li>
 
-<li>Produtos</li>
+<li><a href="produtos.html">Produtos</a></li>
 
 <li>Banho e Tosa</li>
 
-<li>Curiosidades</li>
+<li><a href="curiosidades.html">Curiosidades</a></li>
 
 </ul>
 
