--- a/cap02/projeto/quem-somos.html
+++ b/cap02/projeto/quem-somos.html
@@ -13,7 +13,7 @@
 
 
 <body> 
-
+<p><a href="index.html">Home</a></p>
 
 
 <h1><img src="Multimidia/meuamigocao.jpg" alt="meu amigo cão - pet shop">Quem somos</h1>
