atividade 7 do livro finalizada

--- a/cap02/projeto/index.html
+++ b/cap02/projeto/index.html
@@ -30,6 +30,9 @@
 
 </ul>
 
+<p>Atendimento:
+<a href="mailto:atendimento@meuamigocaopetshop.com">atendimento@meuamigocaopetshop.com</a>
+- (0XX) 99999-9999 / (0xx) 88888-8888</p>
 </body>
 
 
