finalizada a atividade 8 do livro

--- a/cap02/projeto/index.html
+++ b/cap02/projeto/index.html
@@ -16,6 +16,8 @@
 
 <h1>Meu amigo cão - Petshop</h1>
 
+<p><a href="boletim.html">Assine o boletim mensal</a></p>
+
 <ul>
 
 <li><a href="index.html">Home</a></li>
@@ -24,7 +26,7 @@
 
 <li><a href="produtos.html">Produtos</a></li>
 
-<li>Banho e Tosa</li>
+<li><a href="banho-e-tosa.html">Banho e Tosa</a></li>
 
 <li><a href="curiosidades.html">Curiosidades</a></li>
 
