--- a/cap02/projeto/boletim.html
+++ b/cap02/projeto/boletim.html
@@ -24,10 +24,13 @@
 <p>Fazendo sua assinatura<br> 
 você receberá mensalmente informações sobre nossos produtos, serviços, eventos e descontos.</p>
 
+<form method="post" id="boletim" action="obrigado.html"> 
 
+<p><label for="nome">Nome:</label><input type="text" name="nome" id="nome" placeholder="Digite seu nome"></p>
 
+<p><label for="email">Email:</label> <input type="email" name="email" id="email" placeholder="Digite seu endereço de email" size="30"></p>
 
-
-
+<input type="submit" value="Enviar">
+</form>
 </body>
 </html>
