iniciando capitulo 3 do livro

--- a/cap03/projeto/curiosidades.html
+++ b/cap03/projeto/curiosidades.html
@@ -8,7 +8,49 @@
 <meta charset="utf-8">
 
 <title>Meu amigo cão - Petshop</title>
-
+<style> 
+h2{
+    background-color: #C0262C;
+    background-image: url(multimidia/importante-saber.jpg), url(multimidia/back-bolinha.gif);
+    background-repeat: no-repeat, repeat;
+    background-position: center right, center center;
+    width: 470px;
+    padding: 61px 400px 61px 100px;
+    color: #FFFFFF;
+    font-size: 2.5em;
+    letter-spacing: .1em;
+}
+figure{
+    border: #C0262C solid thin;
+    border-radius: 35px 35px 0 0;
+    padding: 20px 0 0;
+    text-align: center;
+}
+figcaption{
+    background-color: #C0262C;
+    padding: 7px 0;
+    color: #FFFFFF;
+    font-size: 1.5em;
+}
+ul li{
+    list-style-type: none;
+    list-style-image: url(multimidia/ossinho.png);
+    list-style-position: inside;
+    margin: 30px 0;
+}
+dt{
+    color: #fff;
+    background-color: #C0262C;
+    padding: 7px;
+}
+dd{
+    border: thin #C0262C solid;
+    border-radius: 0 0 25px 25px;
+    margin-top: -3px;
+    margin-bottom: 30px;
+    padding: 20px 20px 0;
+}
+</style>
 </head>
 
 
@@ -131,7 +173,8 @@ Antigamente esta raça era considerada um gladiador feroz, agora é vista como u
 <p> <a href="#top"> Voltar </a> </p>
 
 
-</dd>
+
+</dd>
 
 
 <dt><a id="collie"></a>Collie</dt>
