fim da pagina 142 do livro

--- a/cap03/projeto/curiosidades.html
+++ b/cap03/projeto/curiosidades.html
@@ -73,6 +73,27 @@ ul li a{
 ul li a:hover{
     text-decoration: underline;
 }
+dd a[target="_blank"] {
+    text-decoration: none;
+    color: #C0262C;
+    font-weight: bold;
+    padding: 7px;
+    display: inline-block;
+}
+dd a[target="_blank"]:hover {
+    text-decoration: underline;
+}
+dd a[href="#top"] {
+    text-decoration: none;
+    color: #C0262C;
+    font-weight: bold;
+    padding: 7px 0 7px 30px;
+    background: url(multimidia/seta-voltar.png) no-repeat left center;
+}
+dd a[href="#top"]:hover {
+    text-decoration: underline;
+    background: url(multimidia/seta-voltar-hover.png) no-repeat left center;
+}
 </style>
 </head>
 
