fim da pagina 144 do livro

--- a/cap03/projeto/curiosidades.html
+++ b/cap03/projeto/curiosidades.html
@@ -8,6 +8,7 @@
 <meta charset="utf-8">
 
 <title>Meu amigo cão - Petshop</title>
+<link href="estilos/principal.css" rel="stylesheet" type="text/css">
 <style> 
 h2{
     background-color: #C0262C;
