inicio do capitulo 4 do livro

--- a/cap04/projeto/index.html
+++ b/cap04/projeto/index.html
@@ -13,13 +13,22 @@
 
 
 <body>
-
+<header>
 <h1>Meu amigo cão - Petshop</h1>
-
-
+<img src="multimidia/anuncio-cantinho-feliz-h.jpg" alt="anúncio - cantinho feliz, hotel para cachorro">
+<section>
 <p><a href="boletim.html">Assine o boletim mensal</a></p>
-
-
+<p>Nos acompanhe:</p>
+<figure>
+<a href="#"><img src="multimidia/ms-facebook.gif" alt="facebook"></a>
+<a href="#"><img src="multimidia/ms-twitter.gif" alt="twitter"></a>
+<a href="#"><img src="multimidia/ms-youtube.gif" alt="youtube"></a>
+<a href="#"><img src="multimidia/ms-pinterest.gif" alt="pinterest"></a>
+<a href="#"><img src="multimidia/ms-gmais.gif" alt="google mais"></a>
+</figure>
+</section>
+</header>
+<nav>
 <ul>
 
 <li><a href="index.html">Home</a></li>
@@ -32,13 +41,24 @@
 
 <li><a href="curiosidades.html">Curiosidades</a></li>
 </ul>
-
-
+</nav>
+<aside>
+<img src="multimidia/anuncio_pet1.jpg" alt="anúncio">
+</aside>
+<main>
+<img src="multimidia/anime-index.jpg" alt="anime">
+<h1>O melhor para o nosso amigo cão</h1>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ipsum distinctio esse ratione neque laborum nulla. Laborum officia atque esse magni consequuntur accusamus labore minus praesentium, quasi provident cum obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem molestiae nobis, cum sint nostrum aut! Dignissimos, consectetur facilis dolores quae maiores natus nulla similique ipsum laudantium aspernatur esse totam optio?</p>
+</main>
+<aside>
+<img src="multimidia/anuncio_pet2.jpg" alt="anúncio">
+</aside>
+<footer>
 <p>Atendimento: 
 <a href="mailto:atendimento@meuamigocaopetshop.com">
 atendimento@meuamigocaopetshop.com</a>  
  - (0XX) 99999-9999 / (0XX) 88888-8888</p>
-
+</footer>
 
 </body>
 
