--- a/cap04/projeto/banho-e-tosa.html
+++ b/cap04/projeto/banho-e-tosa.html
@@ -7,6 +7,7 @@
 
 <body>
 <a href="index.html">Home</a>
+<main>
 <h1> Agendamento para banho e tosa </h1>
 <h2> Faça o seu agendamento com pelo menos 48 horas de antecedência</h2>
 
@@ -75,6 +76,9 @@ Tipo de tosa:
 <input type="submit" value="Enviar">
 
 </form>
-
+</main>
+<footer>
+    <p>Atendimento: atendimento@meuamigocaopetshop.com • (0XX) 99999-9999 / (0XX) 88888-8888</p>
+</footer>
 </body>
 </html>
