--- a/cap04/projeto/boletim.html
+++ b/cap04/projeto/boletim.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+<main>
 <h1>Meu amigo cão - Petshop</h1>
 
 <h1>Boletim mensal</h1>
@@ -34,6 +34,9 @@ você receberá mensalmente informações sobre nossos produtos, serviços, even
 
 </form>
 
-
+</main>
+<footer>
+    <p>Atendimento: atendimento@meuamigocaopetshop.com • (0XX) 99999-9999 / (0XX) 88888-8888</p>
+</footer>
 </body>
 </html>
