--- a/cap04/projeto/obrigado.html
+++ b/cap04/projeto/obrigado.html
@@ -14,7 +14,7 @@
 
 
 <body> 
-
+<main>
 
 
 <p>
@@ -31,8 +31,16 @@
 
 
 <p>&nbsp;</p>
-
-
+<p>Aproveite agora mesmo nossa dica em destaque</p>
+<p><img src="multimidia/anuncio_pet3.jpg" alt="anuncio pet">
+Lorem ipsum dolor sit amet <br>
+consectetur adipisicing elit. Voluptas eveniet ducimus assumenda quidem quibusdam sapiente quas. Pariatur autem voluptatem, consequatur facilis quam cum recusandae debitis quasi neque officia minima deleniti?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perferendis officiis et reiciendis? Doloremque odio inventore distinctio numquam molestiae, dolore consequatur quos perferendis at sequi eos voluptates animi tenetur reprehenderit.</p>
+<p>Aliquam luctus venenatis porttitor. Vivamus vitae aliquam arcu, sed auctor lacus. Fusce placerat, odio.</p>
+</main>
+<footer>
+    <p>Atendimento: atendimento@meuamigocaopetshop.com • (0XX) 99999-9999 / (0XX) 88888-8888</p>
+</footer>
 </body>
 
 
