--- a/cap04/projeto/produtos.html
+++ b/cap04/projeto/produtos.html
@@ -16,7 +16,7 @@
 <body>
 
 <p><a href="index.html">Home</a></p>
-
+<main>
 <table border="1">
 
 <caption>Produtos</caption>
@@ -125,7 +125,10 @@ Consulte nossos preços para grandes quantidades.
 
 </table>
 
-
+</main>
+<footer>
+    <p>Atendimento: atendimento@meuamigocaopetshop.com • (0XX) 99999-9999 / (0XX) 88888-8888</p>
+</footer>
 </body>
 
 </html>
