finalizacao cap 4 do livro

--- a/cap04/projeto/curiosidades.html
+++ b/cap04/projeto/curiosidades.html
@@ -1,15 +1,9 @@
 ﻿<!doctype html>
-
 <html lang="pt-br">
-
-
 <head> 
-
 <meta charset="utf-8">
-
 <title>Meu amigo cão - Petshop</title>
-
-
+<script src="interacao/html5shiv.min.js"></script>
 <link href="estilos/principal.css" rel="stylesheet" type="text/css">
 <style>
 h2 {
