--- a/cap04/projeto/quem-somos.html
+++ b/cap04/projeto/quem-somos.html
@@ -10,6 +10,7 @@
 	<title>Quem somos - Meu amigo cão</title>
 
 	<link href="estilos/principal.css" rel="stylesheet" type="text/css">
+	<script src="interacao/html5shiv.min.js"></script>
 </head>
 
 
