--- a/cap04/projeto/obrigado.html
+++ b/cap04/projeto/obrigado.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 
 <title>Obrigado - Meu amigo cão</title>
-
+<script src="interacao/html5shiv.min.js"></script>
 
 </head>
 
