--- a/cap04/projeto/produtos.html
+++ b/cap04/projeto/produtos.html
@@ -8,7 +8,7 @@
 <meta charset="utf-8">
 
 <title>Produtos - Meu amigo cão</title>
-
+<script src="interacao/html5shiv.min.js"></script>
 
 </head>
 
