--- a/cap05/projeto/produtos.html
+++ b/cap05/projeto/produtos.html
@@ -2,7 +2,7 @@
 
 <html lang="pt-br">
 
-
+<link rel="stylesheet" href="estilos/principal.css" type="text/css">
 <head>
 
 <meta charset="utf-8">
@@ -16,11 +16,11 @@
 
 
 
-<body>
+<body id="produtos">
 <p><a href="index.html">Home</a></p>
 <main>
 
-<table border="1">
+<table>
 
 <caption>Produtos</caption>
 
