--- a/cap05/projeto/boletim.html
+++ b/cap05/projeto/boletim.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 
 <html lang="pt-br">
-
+<link rel="stylesheet" href="estilos/principal.css" type="text/css">
 <head>
 
 <meta charset="utf-8">
@@ -11,7 +11,7 @@
 <script src="interacao/html5shiv.min.js"></script>
 </head>
 
-<body>
+<body id="boletim-f">
 
 <main>
 
