inicio atividade 4 cap 5

--- a/cap05/projeto/banho-e-tosa.html
+++ b/cap05/projeto/banho-e-tosa.html
@@ -4,9 +4,10 @@
 <meta charset="utf-8">
 <title>Meu amigo cão</title>
 <script src="interacao/html5shiv.min.js"></script>
+<link rel="stylesheet" href="estilos/principal.css" type="text/css">
 </head>
 
-<body>
+<body id="banhoEtosa">
 <a href="index.html">Home</a>
 <main>
 
@@ -35,9 +36,9 @@
 <p><label for="nome_animal">Nome:</label> <input type="text" name="nome_animal" id="nome_animal"  size = "25" maxlength="40" placeholder="Digite o nome do animal"/></p>
 
 <p> Porte do cão:
-<input type="radio" name="porte_animal" id="animal_pequeno" value="animal_pequeno" checked> pequeno
-<input type="radio" name="porte_animal" id="animal_medio" value="animal_medio" > médio
-<input type="radio" name="porte_animal" id="animal_grande" value="animal_grande"> grande
+<input type="radio" name="porte_animal" id="animal_pequeno" value="animal_pequeno" checked> <label for="animal_pequeno" class="labelSimples"> pequeno </label>
+<input type="radio" name="porte_animal" id="animal_medio" value="animal_medio" ><label for="animal_medio" class="labelSimples"> médio</label>
+<input type="radio" name="porte_animal" id="animal_grande" value="animal_grande"> <label for="animal_grande" class="labelSimples">grande</label>
 </p>
 
 <p>
