finalizada a atividade 4 do cap 5

--- a/cap05/projeto/banho-e-tosa.html
+++ b/cap05/projeto/banho-e-tosa.html
@@ -62,11 +62,16 @@ Tipo de tosa:
 <fieldset id="ident_marcacao"> 
 <legend> Horário - (Não atendemos de domingo e segunda-feira) </legend>
 <p>Indique os dias da semana de sua preferência:<br>
-<input type="checkbox" name="semana" value="idterca"/> Terça-feira
-<input type="checkbox" name="semana" value="idquarta"/> Quarta-feira
-<input type="checkbox" name="semana" value="idquinta"/> Quinta-feira
-<input type="checkbox" name="semana" value="idsexta"/> Sexta-feira
-<input type="checkbox" name="semana" value="idsabado"/> Sábado-feira
+<input type="checkbox" name="semana" value="idterca"/>
+<label for="idterca" class="labelSimples"> Terça-feira</label>
+<input type="checkbox" name="semana" value="idquarta"/>
+<label for="idquarta" class="labelSimples"> Quarta-feira </label>
+<input type="checkbox" name="semana" value="idquinta"/> 
+<label for="idquinta" class="labelSimples"> Quinta-feira </label>
+<input type="checkbox" name="semana" value="idsexta"/> 
+<label for="idsexta" class="labelSimples"> Sexta-feira </label>
+<input type="checkbox" name="semana" value="idsabado"/> 
+<label for="idsabado" class="labelSimples"> Sábado </label>
 </p>
 
 <p>Primeira opção de horário:
