--- a/cap05/projeto/index.html
+++ b/cap05/projeto/index.html
@@ -10,12 +10,13 @@
 <title>Meu amigo cão - Petshop</title>
 
 <script src="interacao/html5shiv.min.js"></script>
+<link rel="stylesheet" href="estilos/principal.css" type="text/css">
 </head>
 
 
 
 
-<body>
+<body id="inicial">
 
 
 <header>
