--- a/cap05/projeto/curiosidades.html
+++ b/cap05/projeto/curiosidades.html
@@ -115,7 +115,49 @@ dd a[href="#top"]:hover {
 <body>
 
 
-<a href="index.html">Home</a>
+	<header>
+
+		<h1>Meu amigo cão - Petshop</h1>
+		<div id="anuncio">
+		<img src="multimidia/anuncio-cantinho-feliz-h.jpg" alt="anúncio - cantinho feliz, hotel para cachorro">
+		</div>
+		<body>
+		
+		
+		<section>
+		
+		<p><a href="boletim.html">Assine o boletim mensal</a></p>
+		
+		<p>nos acompanhe: </p>
+		<figure>
+		<a href="#"><img src="multimidia/ms-facebook.gif" alt="facebook"></a> 
+		<a href="#"><img src="multimidia/ms-twitter.gif" alt="twitter"></a> 
+		<a href="#"><img src="multimidia/ms-youtube.gif" alt="youtube"></a> 
+		<a href="#"><img src="multimidia/ms-pinterest.gif" alt="pinterest"></a> 
+		<a href="#"><img src="multimidia/ms-gmais.gif" alt="google mais"></a>
+		</figure>
+		
+		</section>
+		
+		</header>
+		
+		<nav>
+		
+		<ul>
+		
+		<li><a href="index.html">Home</a></li>
+		
+		<li><a href="quem-somos.html">Quem somos</a></li>
+		
+		<li><a href="produtos.html">Produtos</a></li>
+		
+		<li><a href="banho-e-tosa.html">Banho e Tosa</a></li>
+		
+		<li><a href="curiosidades.html">Curiosidades</a></li>
+		
+		</ul>
+		
+		</nav>
 <main>
 
 <h1>
@@ -231,7 +273,8 @@ Antigamente esta raça era considerada um gladiador feroz, agora é vista como u
 <p> <a href="#top"> Voltar </a> </p>
 
 
-</dd>
+
+</dd>
 
 
 <dt><a id="collie"></a>Collie</dt>
