--- a/cap05/projeto/index.html
+++ b/cap05/projeto/index.html
@@ -22,9 +22,9 @@
 <header>
 
 <h1>Meu amigo cão - Petshop</h1>
-
+<div id="anuncio">
 <img src="multimidia/anuncio-cantinho-feliz-h.jpg" alt="anúncio - cantinho feliz, hotel para cachorro">
-
+</div>
 <body>
 
 
