--- a/cap05/projeto/obrigado.html
+++ b/cap05/projeto/obrigado.html
@@ -11,12 +11,12 @@
 
 
 <script src="interacao/html5shiv.min.js"></script>
-
+<link rel="stylesheet" href="estilos/principal.css" type="text/css">
 </head>
 
 
 
-<body> 
+<body id="obrigado"> 
 
     <header>
 
