finalizada a atividade 6 do livro

--- a/cap05/projeto/obrigado.html
+++ b/cap05/projeto/obrigado.html
@@ -73,8 +73,8 @@
 
 
 <p>Nossa equipe irá conferir sua solicitação e enviará uma confirmação para seu email.</p>
-
-
+<div id="destaqueObrigado">
+<div id="lacinho"><img src="multimidia/lacinho.png" alt="lacinho"></div>
 <p>Aproveite agora mesmo a nossa dica em destaque:</p>
 <p><img src="multimidia/anuncio_pet3.jpg" alt="anúncio pet"/>
 
@@ -88,7 +88,7 @@ consectetur adipiscing elit. Aliquam fringilla lacinia ultricies. Nam elit lectu
 
 <p>Morbi risus diam, cursus ac dapibus sit amet, feugiat vitae mauris.</p>
 
-
+</div>
 </main>
 
 <footer>
