atividade de transição em caixas no site

--- a/cap05/projeto/index.html
+++ b/cap05/projeto/index.html
@@ -74,7 +74,20 @@
 
 <main>
 
-<img src="multimidia/anime-index.jpg"alt="anime"/>
+<figure class="anuncioAnime">
+<div class="boxAnuncio">
+<img src="multimidia/anuncio1.jpg" alt="">
+<p>BRINCADEIRAS <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+</div>
+<div class="boxAnuncio">
+<img src="multimidia/anuncio2.jpg" alt="">
+<p>CUIDADOS <br>Facilis, suscipit, expedita, sed, architecto ex illo excepturi blanditiis</p>
+</div>
+<div class="boxAnuncio">
+<img src="multimidia/anuncio3.jpg" alt="">
+<p>SAÚDE <br>Aliquam qui at fugit magnam possimus praesentium repudiandae sint.</p>
+</div>
+</figure>
 
 <h1>O melhor para o nosso amigo cão</h1>
 
